WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133258
[WebKit2] Rework WebPreferencesStore to allow easier overriding of defaults
https://bugs.webkit.org/show_bug.cgi?id=133258
Summary
[WebKit2] Rework WebPreferencesStore to allow easier overriding of defaults
Sam Weinig
Reported
2014-05-24 11:37:37 PDT
[WebKit2] Rework WebPreferencesStore to allow easier overriding of defaults
Attachments
Patch
(18.86 KB, patch)
2014-05-24 11:46 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2014-05-24 11:46:32 PDT
Created
attachment 232022
[details]
Patch
WebKit Commit Bot
Comment 2
2014-05-24 11:49:13 PDT
Attachment 232022
[details]
did not pass style-queue: ERROR: Source/WebKit2/Shared/WebPreferencesStore.cpp:158: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/Shared/WebPreferencesStore.cpp:159: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/Shared/WebPreferencesStore.cpp:160: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/Shared/WebPreferencesStore.cpp:161: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/Shared/WebPreferencesStore.h:353: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebKit2/Shared/WebPreferencesStore.h:354: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebKit2/Shared/WebPreferencesStore.h:355: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebKit2/Shared/WebPreferencesStore.h:356: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebKit2/Shared/WebPreferencesStore.h:357: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebKit2/Shared/WebPreferencesStore.h:382: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 10 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2014-05-24 15:49:46 PDT
Comment on
attachment 232022
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232022&action=review
> Source/WebKit2/Shared/WebPreferencesStore.cpp:122 > + }
Should have a default case that returns false.
> Source/WebKit2/Shared/WebPreferencesStore.h:386 > + if (m_type == Type::String) > + m_string.~String();
Maybe you can factor this out into a private destroy() member function...
> Source/WebKit2/Shared/WebPreferencesStore.h:412 > + if (m_type == Type::String) > + m_string.~String();
...and call it here too.
Sam Weinig
Comment 4
2014-05-25 12:00:07 PDT
Committed
r169321
: <
http://trac.webkit.org/changeset/169321
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug