Source/WebKit2/Shared/WebPreferencesStore.h
@@ -28,6 +28,7 @@
 
 #include "ArgumentDecoder.h"
 #include "ArgumentEncoder.h"
+#include <WebCore/SecurityOrigin.h>
 #include <wtf/HashMap.h>
 #include <wtf/text/StringHash.h>
 #include <wtf/text/WTFString.h>
@@ -176,7 +177,6 @@ namespace WebKit {
     macro(TabToLinksEnabled, tabToLinksEnabled, Bool, bool, false) \
     macro(InteractiveFormValidationEnabled, interactiveFormValidationEnabled, Bool, bool, false) \
     macro(ScrollingPerformanceLoggingEnabled, scrollingPerformanceLoggingEnabled, Bool, bool, false) \
-    macro(StorageBlockingPolicy, storageBlockingPolicy, UInt32, uint32_t, 0) \
     macro(ScrollAnimatorEnabled, scrollAnimatorEnabled, Bool, bool, DEFAULT_WEBKIT_SCROLL_ANIMATOR_ENABLED) \
     macro(ScreenFontSubstitutionEnabled, screenFontSubstitutionEnabled, Bool, bool, DEFAULT_SCREEN_FONT_SUBSTITUTION_ENABLED) \
     macro(CookieEnabled, cookieEnabled, Bool, bool, true) \
@@ -233,9 +233,6 @@ namespace WebKit {
     macro(PasswordEchoDuration, passwordEchoDuration, Double, double, 2) \
     \
 
-#define FOR_EACH_WEBKIT_FLOAT_PREFERENCE(macro) \
-    \
-
 #define FOR_EACH_WEBKIT_UINT32_PREFERENCE(macro) \
     macro(FontSmoothingLevel, fontSmoothingLevel, UInt32, uint32_t, FontSmoothingLevelMedium) \
     macro(LayoutFallbackWidth, layoutFallbackWidth, UInt32, uint32_t, 980) \
@@ -246,6 +243,7 @@ namespace WebKit {
     macro(InspectorAttachedHeight, inspectorAttachedHeight, UInt32, uint32_t, 300) \
     macro(InspectorAttachedWidth, inspectorAttachedWidth, UInt32, uint32_t, 750) \
     macro(InspectorAttachmentSide, inspectorAttachmentSide, UInt32, uint32_t, 0) \
+    macro(StorageBlockingPolicy, storageBlockingPolicy, UInt32, uint32_t, WebCore::SecurityOrigin::AllowAllStorage) \
     \
 
 #if PLATFORM(COCOA)
@@ -296,7 +294,6 @@ namespace WebKit {
 #define FOR_EACH_WEBKIT_PREFERENCE(macro) \
     FOR_EACH_WEBKIT_BOOL_PREFERENCE(macro) \
     FOR_EACH_WEBKIT_DOUBLE_PREFERENCE(macro) \
-    FOR_EACH_WEBKIT_FLOAT_PREFERENCE(macro) \
     FOR_EACH_WEBKIT_UINT32_PREFERENCE(macro) \
     FOR_EACH_WEBKIT_STRING_PREFERENCE(macro) \
     FOR_EACH_WEBKIT_STRING_PREFERENCE_NOT_IN_WEBCORE(macro) \
@@ -332,18 +329,132 @@ struct WebPreferencesStore {
     bool setDoubleValueForKey(const String& key, double value);
     double getDoubleValueForKey(const String& key) const;
 
-    bool setFloatValueForKey(const String& key, float value);
-    float getFloatValueForKey(const String& key) const;
+    void setOverrideDefaultsStringValueForKey(const String& key, String value);
+    void setOverrideDefaultsBoolValueForKey(const String& key, bool value);
+    void setOverrideDefaultsUInt32ValueForKey(const String& key, uint32_t value);
+    void setOverrideDefaultsDoubleValueForKey(const String& key, double value);
 
     // For WebKitTestRunner usage.
     static void overrideBoolValueForKey(const String& key, bool value);
     static void removeTestRunnerOverrides();
 
-    HashMap<String, String> m_stringValues;
-    HashMap<String, bool> m_boolValues;
-    HashMap<String, uint32_t> m_uint32Values;
-    HashMap<String, double> m_doubleValues;
-    HashMap<String, float> m_floatValues;
+    struct Value {
+        enum class Type {
+            None,
+            String,
+            Bool,
+            UInt32,
+            Double,
+        };
+
+        void encode(IPC::ArgumentEncoder&) const;
+        static bool decode(IPC::ArgumentDecoder&, Value&);
+
+        explicit Value() : m_type(Type::None) { }
+        explicit Value(const String& value) : m_type(Type::String), m_string(value) { }
+        explicit Value(bool value) : m_type(Type::Bool), m_bool(value) { }
+        explicit Value(uint32_t value) : m_type(Type::UInt32), m_uint32(value) { }
+        explicit Value(double value) : m_type(Type::Double), m_double(value) { }
+
+        Value(Value&& value)
+            : m_type(value.m_type)
+        {
+            switch (m_type) {
+            case Type::None:
+                break;
+            case Type::String:
+                new (&m_string) String(std::move(value.m_string));
+                break;
+            case Type::Bool:
+                m_bool = value.m_bool;
+                break;
+            case Type::UInt32:
+                m_uint32 = value.m_uint32;
+                break;
+            case Type::Double:
+                m_double = value.m_double;
+                break;
+            }
+        }
+
+        Value& operator=(const Value& other)
+        {
+            if (this == &other)
+                return *this;
+                
+            destroy();
+
+            m_type = other.m_type;
+            switch (m_type) {
+            case Type::None:
+                break;
+            case Type::String:
+                new (&m_string) String(other.m_string);
+                break;
+            case Type::Bool:
+                m_bool = other.m_bool;
+                break;
+            case Type::UInt32:
+                m_uint32 = other.m_uint32;
+                break;
+            case Type::Double:
+                m_double = other.m_double;
+                break;
+            }
+    
+            return *this;
+        }
+
+        ~Value()
+        {
+            destroy();
+        }
+
+        Type type() const { return m_type; }
+
+        String asString() const
+        {
+            ASSERT(m_type == Type::String);
+            return m_string;
+        }
+
+        bool asBool() const
+        {
+            ASSERT(m_type == Type::Bool);
+            return m_bool;
+        }
+
+        uint32_t asUInt32() const
+        {
+            ASSERT(m_type == Type::UInt32);
+            return m_uint32;
+        }
+
+        double asDouble() const
+        {
+            ASSERT(m_type == Type::Double);
+            return m_double;
+        }
+
+    private:
+        void destroy()
+        {
+            if (m_type == Type::String)
+                m_string.~String();
+        }
+
+        Type m_type;
+        union {
+            String m_string;
+            bool m_bool;
+            uint32_t m_uint32;
+            double m_double;
+        };
+    };
+
+    typedef HashMap<String, Value> ValueMap;
+    ValueMap m_values;
+    ValueMap m_overridenDefaults;
 };
 
 } // namespace WebKit
